# PythonVerbalExpressions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint  MANIFEST.IN  README.md  builddoc.bat  check_names.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  setup.py.old  verbex.py
.github/workflows/: main.yml
docs/: index.html  index.md  search.js  verbex.html
docs/verbex/: verbex.html
html/: index.html
html/verbex/: index.html  verbex.html
tests/: __init__.py  test_verbal_expressions.py  test_verbex.py  verbal_expressions_test.py
verbalexpressions/: Unittest.py  __init__.py  verbal_expressions.py
verbex/: LICENSE.txt  __init__.py  verbex.py
